--- a/build.gradle
+++ b/build.gradle
@@ -107,4 +107,16 @@ createReleaseBody.configure {
   }
 }
 
-apply from: "$rootDir/gradle/sonar.gradle"
+
+
+
+sonarqube {
+  properties {
+    property "sonar.projectKey", "gii-is-AISS_spotbugs"
+    property "sonar.organization", "gii-is-aiss"
+    property "sonar.host.url", "https://sonarcloud.io"
+    property "SONAR_TOKEN","ee178ccb9ea496364b186033801ea2863c29c003"
+    property "sonar.coverage.jacoco.xmlReportPaths", "build/jacoco/test/jacocoTestReport.xml"
+    property "sonar.core.codeCoveragePlugin","jacoco"
+  }
+}
